lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__exit-confirmation-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                          Landscape: not installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌Overview──────────────────────────────────────────────────────────────────┐"
"│> Overview            ││Landscape is not installed          │lkit resident service                │"
"│  Install             ││                                    │A systemd service that executes the  │"
"│  Backup              ││Install root  /root/.lkit/landscape │privileged operations (install,      │"
"│  Update              ││                                    │update, reinit) delegated by this    │"
"│  Mirror              ││                                    │console.                             │"
"│  Common software     ││                                    │lkit version  0.5.0                  │"
"│  Reinit              ││                                    │                                     │"
"│                      ││                                    │lkit daemon is not running; deploy it│"
"│                      ││                                    │with `lkit self install`             │"
"│                      ││ ┌Confirm exit──────────────────────────────────┐he lkit daemon ]         │"
"│                      ││ │                                              │                         │"
"│                      ││ │    Ctrl+C Exit  Enter Confirm  Esc Cancel    │                         │"
"│                      ││ └──────────────────────────────────────────────┘                         │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                         Language: English (en)"
"Ctrl+C Exit  Enter Confirm  Esc Cancel                                                              "
