lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__flare-dialog-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Overview────────────────────────────────────────────────────────────────┐"
"│> Overview            ││Landscape is installed              │lkit resident service                │"
"│  Install             ││                                    │A systemd service that executes the  │"
"│  Backup              ││Version       1.2.3                 │privileged operations (install,      │"
"│  Update              ││Service       systemd               │update, reinit) delegated by this    │"
"│  Mirror         ┌Flare recovery channel────────────────────────────────────────┐                 │"
"│  Common software│The daemon-hosted flare server keeps an L2 channel (lflare    │                 │"
"│  Reinit         │client) available even when Landscape network configuration   │                 │"
"│                 │breaks, including a failed network takeover.                  │unning; deploy it│"
"│                 │                                                              │all`             │"
"│                 │Listen devices   any                                          │daemon ]         │"
"│                 │Ethertype        0x88b6                                       │                 │"
"│                 │Forward ports    22,6443                                      │                 │"
"│                 │Discovery token  <unset>                                      │                 │"
"│                 │Flare recovery psk********************                        │                 │"
"│                 │                                                              │                 │"
"│                 │e Edit psk  s Save  Esc Close                                 │                 │"
"│                 └──────────────────────────────────────────────────────────────┘                 │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                         Language: English (en)"
"Ctrl+C Exit  Enter Deploy  Esc/← Menu                                                               "
