lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__footer-long-zh-notice-72x18.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                          Landscape：未安装  daemon：未运行" Hidden by multi-width symbols: [(49, " "), (51, " "), (53, " "), (55, " "), (65, " "), (67, " "), (69, " "), (71, " ")]
"────────────────────────────────────────────────────────────────────────"
"┌导航──────────────────┐┌概览──────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " "), (26, " "), (28, " ")]
"│> 概览                ││Landscape 尚未安装                            │" Hidden by multi-width symbols: [(4, " "), (6, " "), (36, " "), (38, " "), (40, " "), (42, " ")]
"│  安装                ││                                              │" Hidden by multi-width symbols: [(4, " "), (6, " ")]
"│  备份                ││安装根目录  /root/.lkit/landscape             │" Hidden by multi-width symbols: [(4, " "), (6, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " ")]
"│  更新                ││                                              │" Hidden by multi-width symbols: [(4, " "), (6, " ")]
"│  换源                ││lkit 常驻服务                                 │" Hidden by multi-width symbols: [(4, " "), (6, " "), (31, " "), (33, " "), (35, " "), (37, " ")]
"│  常用软件            ││以 systemd                                    │" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " "), (26, " ")]
"│  重新初始化          ││服务常驻后台，代本控制台执行安装、更新、重初始│" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " "), (12, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " ")]
"│                      ││化等特权操作。                                │" Hidden by multi-width symbols: [(26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " ")]
"│                      ││lkit 版本  0.5.0                              │" Hidden by multi-width symbols: [(31, " "), (33, " ")]
"│                      ││                                              │"
"└──────────────────────┘└──────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────"
"网络回滚正在进行中，请勿关闭终端；所有网络配置   [L] 切换到 English (en)" Hidden by multi-width symbols: [(1, " "), (3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (54, " "), (56, " "), (58, " ")]
"将在回滚完成后恢复到上一个已知良好的状态。                              " Hidden by multi-width symbols: [(1, " "), (3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " ")]
"Ctrl+C 退出  上/下 菜单  右/Enter 打开  Tab 切换  双 Esc 退出确认       " Hidden by multi-width symbols: [(8, " "), (10, " "), (14, " "), (17, " "), (20, " "), (22, " "), (26, " "), (35, " "), (37, " "), (45, " "), (47, " "), (51, " "), (58, " "), (60, " "), (62, " "), (64, " ")]
