lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__install-form-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                          Landscape: not installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Environment checks──────────────────────────────────────────────────────┐"
"│  Overview            ││> NOT RUN  Waiting to check this host                                     │"
"│> Install             │└──────────────────────────────────────────────────────────────────────────┘"
"│  Backup              │┌Install───────────────────────────────────┐┌About: Environment checks─────┐"
"│  Update              ││  Version          latest                 ││Read-only deployment checks   │"
"│  Mirror              ││  Repository       Config/Default         ││for platform, kernel,         │"
"│  Common software     ││  Install root     /root/.lkit/landscape  ││resources, dependencies,      │"
"│  Reinit              ││  Admin user       admin                  ││ports, services, and DNS.     │"
"│                      ││  Password                                ││                              │"
"│                      ││  Confirm password                        ││                              │"
"│                      ││                   [ Start installation ] ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"│                      ││                                          ││                              │"
"└──────────────────────┘└──────────────────────────────────────────┘└──────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Enter Details  R Re-run  Down Settings  Esc/← Menu                                     "
