lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__mirror-confirm-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                              Landscape: installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Mirror──────────────────────────────────────────────────────────────────┐"
"│  Overview            ││Host: Debian (package manager: apt)                                       │"
"│  Install             ││                                                                          │"
"│  Backup              ││> Official                                                                │"
"│  Update              ││USTC                                                                      │"
"│> Mirror              ││Tencent Cloud                                                             │"
"│  Common software     ││Huawei Cloud                                                              │"
"│  Reinit           ┌Confirm mirror switch─────────────────────────────────────┐                   │"
"│                   │Switch the Debian package sources to USTC? The current    │                   │"
"│                   │sources are backed up first and can be restored here      │                   │"
"│                   │later.                                                    │                   │"
"│                   │                                                          │                   │"
"│                   │[x] Comment out the CD-ROM source entry                   │                   │"
"│                   │[ ] Also replace the Debian security repository           │                   │"
"│                   │                                                          │                   │"
"│                   │Ctrl+C Exit  Enter Apply  Space Toggle  Esc Cancel        │                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"│                      ││                                                                          │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Enter Apply  Space Toggle  Esc Cancel                                                  "
