lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__overview-navigation-not-installed-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                          Landscape: not installed  daemon: not running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌Overview──────────────────────────────────────────────────────────────────┐"
"│> Overview            ││Landscape is not installed          │lkit resident service                │"
"│  Install             ││                                    │A systemd service that executes the  │"
"│  Backup              ││Install root  /root/.lkit/landscape │privileged operations (install,      │"
"│  Update              ││                                    │update, reinit) delegated by this    │"
"│  Mirror              ││                                    │console.                             │"
"│  Common software     ││                                    │lkit version  0.5.0                  │"
"│  Reinit              ││                                    │                                     │"
"│                      ││                                    │lkit daemon is not running; deploy it│"
"│                      ││                                    │with `lkit self install`             │"
"│                      ││                                    │  [ Deploy the lkit daemon ]         │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Up/Down Menu  Right/Enter Open  Tab Switch  Esc twice Exit prompt                      "
