lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__overview-navigation-zh.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                                      Landscape：未安装  daemon：未运行" Hidden by multi-width symbols: [(77, " "), (79, " "), (81, " "), (83, " "), (93, " "), (95, " "), (97, " "), (99, " ")]
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌导航──────────────────┐┌概览──────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " "), (26, " "), (28, " ")]
"│> 概览                ││Landscape 尚未安装                  │lkit 常驻服务                        │" Hidden by multi-width symbols: [(4, " "), (6, " "), (36, " "), (38, " "), (40, " "), (42, " "), (68, " "), (70, " "), (72, " "), (74, " ")]
"│  安装                ││                                    │以 systemd                           │" Hidden by multi-width symbols: [(4, " "), (6, " "), (63, " ")]
"│  备份                ││安装根目录  /root/.lkit/landscape   │服务常驻后台，代本控制台执行安装、更 │" Hidden by multi-width symbols: [(4, " "), (6, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (63, " "), (65, " "), (67, " "), (69, " "), (71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " "), (97, " ")]
"│  更新                ││                                    │新、重初始化等特权操作。             │" Hidden by multi-width symbols: [(4, " "), (6, " "), (63, " "), (65, " "), (67, " "), (69, " "), (71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " ")]
"│  换源                ││                                    │lkit 版本  <VERSION>                 │" Hidden by multi-width symbols: [(4, " "), (6, " "), (68, " "), (70, " ")]
"│  常用软件            ││                                    │                                     │" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " ")]
"│  重新初始化          ││                                    │lkit 常驻服务未运行；请用 `lkit self │" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " "), (10, " "), (12, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (78, " "), (80, " "), (82, " "), (84, " "), (86, " ")]
"│                      ││                                    │install` 部署                        │" Hidden by multi-width symbols: [(72, " "), (74, " ")]
"│                      ││                                    │  [ 部署 lkit 常驻服务 ]             │" Hidden by multi-width symbols: [(67, " "), (69, " "), (77, " "), (79, " "), (81, " "), (83, " ")]
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"就绪                                                                         [L] 切换到 English (en)" Hidden by multi-width symbols: [(1, " "), (3, " "), (82, " "), (84, " "), (86, " ")]
"Ctrl+C 退出  上/下 菜单  右/Enter 打开  Tab 切换  双 Esc 退出确认                                   " Hidden by multi-width symbols: [(8, " "), (10, " "), (14, " "), (17, " "), (20, " "), (22, " "), (26, " "), (35, " "), (37, " "), (45, " "), (47, " "), (51, " "), (58, " "), (60, " "), (62, " "), (64, " ")]
