lkit-cli/src/console/tests/snapshots/lkit__console__tests__snapshots__overview-panel-daemon-running-en.snap
---
source: lkit-cli/src/console/tests/snapshots.rs
expression: terminal.backend()
---
"Landscape Kit                                                  Landscape: installed  daemon: running"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"┌Navigation────────────┐┌> Overview────────────────────────────────────────────────────────────────┐"
"│> Overview            ││Landscape is installed              │lkit resident service                │"
"│  Install             ││                                    │A systemd service that executes the  │"
"│  Backup              ││Version       1.2.3                 │privileged operations (install,      │"
"│  Update              ││Service       systemd               │update, reinit) delegated by this    │"
"│  Mirror              ││Initialization complete             │console.                             │"
"│  Common software     ││Install root  /root/.lkit/landscape │lkit version  0.5.0                  │"
"│  Reinit              ││                                    │                                     │"
"│                      ││                                    │lkit daemon: running                 │"
"│                      ││                                    │Recovery code for the L2 flare       │"
"│                      ││                                    │channel; hand it to the recovery     │"
"│                      ││                                    │operator for when regular network    │"
"│                      ││                                    │access is lost.                      │"
"│                      ││                                    │> [ Show recovery psk ]              │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"│                      ││                                    │                                     │"
"└──────────────────────┘└──────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────"
"Ready                                                                        [L] Switch to 中文 (zh)" Hidden by multi-width symbols: [(92, " "), (94, " ")]
"Ctrl+C Exit  Enter Show psk  f Flare  Esc/← Menu                                                    "
